[package]
name = "learn_solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "learn_solana"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang ={ version = "0.30.1", features = ["init-if-needed", "anchor-debug"] }
solana-program = "2.2.1"
anchor-spl = "0.30.1"
thiserror = "2.0.11"
spl-memo = { version = "6.0.0", default-features = false }